--- a/vignettes/longevityTools_eDRUG.html
+++ b/vignettes/longevityTools_eDRUG.html
@@ -397,7 +397,28 @@ df &lt;- cbind(df, pvalDF)
 write.table(df, file=&quot;./results/deg_IGF1.xls&quot;, quote=FALSE, sep=&quot;\t&quot;, col.names = NA) </code></pre>
 <p>Sorted by increasing mean FDR.</p>
 <pre class="r"><code>igfDF &lt;- read.delim(&quot;./results/deg_IGF1.xls&quot;, row.names=1)
-igfDF &lt;- igfDF[order(rowMeans(igfDF[,3:4])),][1:20,]</code></pre>
+igfDF[order(rowMeans(igfDF[,3:4])),][1:20,]</code></pre>
+<pre><code>##                        IGF1R IGF1      IGF1R.1      IGF1.1
+## clindamycin_HL60           1    1 6.092100e-03 0.019806975
+## chlorzoxazone_HL60         1    1 1.504907e-02 0.012048534
+## trichostatin A_MCF7        1    1 7.034883e-70 0.064635337
+## lobeline_HL60              1    1 5.806638e-02 0.009620433
+## sirolimus_PC3              1    1 1.275160e-03 0.069531082
+## danazol_HL60               1    1 1.841954e-02 0.062206588
+## metformin_MCF7             1    1 3.828423e-02 0.057888354
+## camptothecin_MCF7          1    0 1.197152e-05 0.102505584
+## anisomycin_HL60            1    1 5.853122e-02 0.044227001
+## cicloheximide_HL60         1    1 2.332200e-02 0.080773276
+## chlortetracycline_HL60     1    0 5.247463e-03 0.123157328
+## meclofenoxate_HL60         0    1 1.032619e-01 0.027735684
+## dirithromycin_HL60         1    1 6.354512e-02 0.068276953
+## lanatoside C_HL60          1    1 9.528609e-02 0.045103831
+## verteporfin_HL60           1    1 9.319481e-02 0.049425440
+## glibenclamide_HL60         1    1 6.094179e-02 0.088000986
+## emetine_HL60               1    0 8.857805e-04 0.155084082
+## puromycin_MCF7             1    0 1.497782e-02 0.143499225
+## sanguinarine_MCF7          0    1 1.246229e-01 0.034384079
+## proscillaridin_MCF7        1    0 4.432492e-02 0.121900908</code></pre>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
